2006-08-15 18:12 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindConn) added to find a conn with two nodes.

2006-08-04 13:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) added zone title argument.
	* src/grid.c (gridWriteTecplotGeomFaceUV) name zone with face id.

2006-08-04 12:50 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) calls gridWriteTecplotGeomFaceUV
	to dump tecplot if min cost is less than -1.5.

2006-08-04 12:42 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridTrianglesOnFaceId) to count triangles in a CAD face.

2006-07-05 14:22 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomNULL.c for volume opts.
	* INSTALL to reccomend FAKEGeomNULL
	* src/FAKEGeomPlate.c, src/FAKEGeomBox.c removed.

2006-07-05 12:32 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeom.c rewound to previous version, needed for unit tests

2006-07-05 14:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.13 Release. For Tin-Chee. Fixed up INSTALL directions.

2006-07-05 14:30 Mike Park  <mike.park@nasa.gov>

	* INSTALL to clearify FUN3D FAKEGeom usage.

2006-07-05 14:18 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeom.c stripped out all code to be really fake.

2006-06-27 15:45 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.12 Release. For Pawel MSL RCS work on Columbia. 
	To include gridRemoveTwoFaceCell,gridRemoveThreeFaceCell 
	parallel bug fixes.

2006-03-31 20:31 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell,gridRemoveThreeFaceCell)
	to prevent two nearby removals from iterfering, call
	queueNewTrasaction before changing concectivities. other swap and
	insert ops use gridmpi to call queueNewTransaction for them, but
	this call shouldb emoved down to alower level.

2006-03-31 15:50 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) to remove hanging ghost
	nodes in the case that there are only one local node.

2006-03-31 10:15 Mike Park  <mike.park@nasa.gov>
